# pinpoint_shooting

./: .env.sample  .gitignore  30-pinpoint.conf  30-pps.conf  Cargo.toml  README.md  Rocket.toml  auth.go  github.go  go.mod  go.sum  home.go  internal.go  main.go  middleware.go  pinpoint-shooting.service  pps.service  render.go  requests.go  restart  schema.go  server.go  test.pl  user.go  util.go
conf/: default.toml  development.toml  production.toml  staging.toml
migrations/2019-07-13-035219_user/: up.sql
migrations/2019-07-14-121419_initial_setup/: down.sql  up.sql
migrations/2019-07-14-133206_initial_setup/: down.sql  up.sql
src/: api.rs  crypt.rs  lib.rs  logging.rs  main.rs  main.save  model.rs  models.rs  oauth.rs  routes.rs  schema.rs  session.rs  settings.rs  shooter.rs  tests.rs
src/view/: index.hbs
src/view/static/css/: main.css
src/view/templates/: index.hbs  index.html.hbs
src/view/templates/includes/: _facebooksdk.html.hbs  _googleanalytics.html.hbs  _googleplatform.html.hbs  _index.html.hbs  _jquery.html.hbs
static/css/: about.css  custom-dark.css  custom-dark.css.map  custom-dark.scss  custom-light.css  custom-light.scss  darkly-bootswatch.scss  darkly-variables.scss  global.css
static/css/.sass-cache/17f0fad34c9d35d2a28e7610485436ecbd23c7b9/: _accordion.scssc  _alert.scssc  _badge.scssc  _breadcrumb.scssc  _button-group.scssc  _buttons.scssc  _card.scssc  _carousel.scssc  _close.scssc  _containers.scssc  _dropdown.scssc  _forms.scssc  _functions.scssc  _grid.scssc  _helpers.scssc  _images.scssc  _list-group.scssc  _mixins.scssc  _modal.scssc  _nav.scssc  _navbar.scssc  _pagination.scssc  _popover.scssc  _progress.scssc  _reboot.scssc  _root.scssc  _spinners.scssc  _tables.scssc  _toasts.scssc  _tooltip.scssc  _transitions.scssc  _type.scssc  _utilities.scssc  _variables.scssc
static/css/.sass-cache/1cb52c53cdd4f04ad170fec3944f45ba24b6c206/: _api.scssc
static/css/.sass-cache/1da26d060f2b872d31c4968de24ab3b3a7953ef4/: _floating-labels.scssc  _form-check.scssc  _form-control.scssc  _form-range.scssc  _form-select.scssc  _form-text.scssc  _input-group.scssc  _labels.scssc  _validation.scssc
static/css/.sass-cache/202beb2be5d22a259f8d6ede7306eab0c7225d47/: _rfs.scssc
static/css/.sass-cache/63f5a418b7c1ce2fe0079ad558b4c9610feed74b/: _clearfix.scssc  _colored-links.scssc  _position.scssc  _ratio.scssc  _stacks.scssc  _stretched-link.scssc  _text-truncation.scssc  _visually-hidden.scssc  _vr.scssc
static/js/: global.js
templates/: about.gohtml  home.gohtml  privacy.gohtml  terms.gohtml
templates/includes/: _blank.gohtml  _bottomrow.gohtml  _end.gohtml  _footer.gohtml  _header.gohtml  _map.gohtml  _messageblock.gohtml  _messages.gohtml  _sidemenu.gohtml  _topmenu.gohtml  _tos_v1_0.gohtml
(+29 files in other folders)
