[package]
name = "pinpoint_shooting"
version = "0.1.0"
authors = ["Jeff Culverhouse <jeff@graystorm.com>"]
edition = "2018"
default-run = "pps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ppslib"
path = "src/lib.rs"

[[bin]]
name = "pps"
path = "src/bin/pps.rs"

[dependencies]
log = "0.4.7"
simple_logger = "1.3.0"
config = "0.9.3"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
once_cell = "0.2.2"
# lazy_static = "1.3.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.14.1"
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve","handlebars_templates"]
