[package]
name = "pinpoint_shooting"
version = "0.1.0"
authors = ["Jeff Culverhouse <jeff@graystorm.com>"]
edition = "2018"
default-run = "pps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ppslib"
path = "src/lib.rs"

[[bin]]
name = "pps"
path = "src/bin/pps.rs"

[dependencies]
slog = "2.5.0"
slog-bunyan = "2.1.0"
base64 = "0.10.1"
rand = "0.7.0"
rand_core = "0.5.0"
rust-crypto = "0.2.36"
config = "0.9.3"
serde_json = "1.0.40"
once_cell = "0.2.2"
dotenv = "0.14.1"
rocket-slog = "0.4.0"
sha2 = "0.8.0"
rusoto_core = "0.40.0"
rusoto_dynamodb = "0.40.0"
rusoto_secretsmanager = "0.40.0"
time = "0.1.42"
google-signin = "0.3.0"

[dependencies.chrono]
version = "0.4.7"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket]
version = "0.4.5"
features = ["private-cookies"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve","handlebars_templates","helmet","json"]

[dependencies.diesel]
version = "1.4.2"
features = ["postgres","chrono"]
